client/public/css/styles.css
:root {
  --color-dark: #000;
  --color-dark-gray: #555;
  --color-blue: #1e3a8a;
  --box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
}

body {
  margin: 0;
  font-family: Arial, Helvetica, sans-serif;
  font-size: medium;
  overflow-x: hidden;
}

#loading-gif {
  border-radius: 5px;
  width: 249px;
  height: 249px;
}

.background {
  background-image: url("../assets/background-img.jpg");
  position: fixed;
  background-size: cover;
  background-position: center;
  height: 100vh;
  width: 100vw;
  z-index: -1;
  filter: blur(5px);
}

nav {
  background-color: white;
  display: flex;
  grid-area: header;
  box-shadow: var(--box-shadow);
  position: fixed;
  top: 0;
  width: 100vw;
}

nav a {
  text-decoration: none;
  color: var(--color-dark-gray);
  text-align: center;
  font-size: large;
  padding: 1.2rem 0;
  width: 20%;
  transition: all 0.3s ease;
}

nav a:hover {
  background-color: var(--color-dark);
  color: white;
}

nav a:focus {
  background-color: var(--color-blue);
}

nav .active {
  background-color: var(--color-blue);
  color: white;
}

.header {
  text-align: center;
  margin-top: 100px;
}

.about-footer {
  text-align: center;
  padding: 20px;
  background-color: gray;
  width: 100vw;
  opacity: 0.8;
  margin: 0;
}

.contact-footer {
  padding-top: 100px;
  text-align: center;
}

.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.task-box {
  width: 300px;
  height: 60px;
}

.task-content {
  border: 1px solid black;
  border-radius: 10px;
  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
  background-color: #a39999;
}

.task-content,
.task-box {
  display: flex;
  flex-direction: row;
  padding: 5px;
  width: 100%; /* Ensure full width */
}

.task-item {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px; /* Increased padding for uniformity */
  margin-bottom: 10px;
  margin-top: 15px;
  width: 100%; /* Full width of the container */
  text-overflow: ellipsis;
}

.task-actions {
  display: flex;
  margin-left: auto;
  gap: 10px;
}

.completed {
  text-decoration: line-through;
  color: #303030;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px; /* Increased padding for uniformity */
  margin-bottom: 10px;
  margin-top: 15px;
  width: 100%; /* Ensure full width */
}

.del-btn,
.edit-btn {
  cursor: pointer;
  border: none;
  text-align: center;
  justify-content: center;
  align-items: center;
  background: none;
}

.del-btn:hover,
.edit-btn:hover {
  transform: scale(1.1);
}

#add-task-field,
#name,
#email,
#message {
  margin-bottom: 15px;
  border-radius: 5px;
  width: 300px;
  padding: 10px;
}

#get-tasks-btn,
.submit-btn,
#send {
  margin-bottom: 10px;
  height: 30px;
  border-radius: 5px;
}

.checkbox {
  margin-left: 10px;
}

.edit-btn {
  background-image: linear-gradient(to right, #8e2de2, #4a00e0);
}

.del-btn {
  background-image: linear-gradient(to right, #c6ffdd, #fbd786, #f7797d);
  margin-right: 5px;
}

.date {
  margin-right: 10px;
  margin-top: 20px;
}

.demo-header {
  margin-top: 65px;
}

.demo-text {
  margin-top: 0;
  margin-left: 10px;
}

video {
  margin-left: 20vw;
  margin-right: 20vw;
  margin-bottom: 10vh;
  width: 60vw;
  border-radius: 5px;
}

@media screen and (max-width: 1200px) {
  nav a {
    width: 25%; /* Adjust width for larger screens */
  }

  .task-box {
    width: 50vw; /* Make task box wider on medium screens */
  }

  .task-content {
    width: 80vw;
  }
}

@media screen and (max-width: 992px) {
  nav a {
    width: 33.33%; /* Adjust width for tablets */
  }

  #add-task-field,
  #name,
  #email,
  #message {
    width: 80%; /* Make input fields wider on tablets */
  }

  .task-box {
    width: 90%; /* Make task box wider on tablets */
  }
}

@media screen and (max-width: 768px) {
  nav a {
    width: 100%; /* Full width for nav items on small screens */
    padding: 1rem 0; /* Adjust padding */
  }

  .header {
    margin-top: 100px; /* Reduce margin for smaller screens */
  }

  .task-box {
    width: 100%; /* Full width for task box on small screens */
  }

  .task-item {
    width: 33.33%;
    text-overflow: ellipsis;
  }


  #add-task-field,
  #name,
  #email,
  #message {
    width: 90%; /* Make input fields wider on small screens */
  }
}

@media screen and (max-width: 480px) {
  body {
    font-size: small; /* Adjust font size for mobile */
    overflow-x: hidden;
  }

  video {
    width: 90vw;
    margin-left: 5vw;
    margin-right: 5vw;
    margin-top: 2vh;
  }

  nav a {
    font-size: medium; /* Adjust font size for nav items */
  }

  .about-footer,
  .contact-footer {
    padding: 10px; /* Reduce padding for footers */
  }

  .edit-btn,
  .del-btn {
    background-image: none;
  }

  .edit-btn::after {
    content: "🖋️";
  }

  .del-btn::after {
    content: "🗑️";
  }
}

@media screen and (min-width: 480px) {
  .edit-btn,
  .del-btn {
    padding: 5px;
    height: 30px;
    margin-top: 10px;
    min-width: 70px;
    border-radius: 5px;
  }

  .edit-btn::after {
    content: "Edit";
  }

  .del-btn::after {
    content: "Delete";
  }
}

